csv file data has been sent to data base for dummy model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
+
 services:
   db:
-    image: postgres:16.1-alpine
+    image: postgis/postgis:16-3.5 # Use the PostGIS image instead of just postgres
     container_name: postgres_db_2
     environment:
       POSTGRES_USER: uzzal         # Define your database username
@@ -11,7 +12,6 @@ services:
       - "5432:5432"                # Expose PostgreSQL on port 5432
     volumes:
       - postgres_data:/var/lib/postgresql/data  # Persist PostgreSQL data
-
     networks:
       - inventoryManagement_network
 
@@ -21,6 +21,7 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
+      - ./data:/app/data
     ports:
       - "8000:8000"  # Expose Django app on port 8000
     depends_on:
@@ -58,3 +59,70 @@ volumes:
 networks:
   inventoryManagement_network:
     driver: bridge
+
+
+
+
+
+
+
+# services:
+#   db:
+#     image: postgres:16.1-alpine
+#     container_name: postgres_db_2
+#     environment:
+#       POSTGRES_USER: uzzal         # Define your database username
+#       POSTGRES_PASSWORD: uzzal@123 # Define your password
+#       POSTGRES_DB: inventory-management-db     # Define your database name
+#       SCRAPY_DB: scrapy_inventory-management-db
+#     ports:
+#       - "5432:5432"                # Expose PostgreSQL on port 5432
+#     volumes:
+#       - postgres_data:/var/lib/postgresql/data  # Persist PostgreSQL data
+
+#     networks:
+#       - inventoryManagement_network
+
+#   web:
+#     build: .
+#     container_name: django_app_2
+#     command: python manage.py runserver 0.0.0.0:8000
+#     volumes:
+#       - .:/app
+#     ports:
+#       - "8000:8000"  # Expose Django app on port 8000
+#     depends_on:
+#       - db  # Wait for the db container to be ready before running the web service
+#     environment:
+#       - POSTGRES_HOST=db
+#       - POSTGRES_PORT=5432
+#       - POSTGRES_USER=uzzal
+#       - POSTGRES_PASSWORD=uzzal@123
+#       - POSTGRES_DB=inventory-management-db
+#       - SCRAPY_DB=scrapy_inventory-management-db
+#     networks:
+#       - inventoryManagement_network
+
+
+#   pgadmin:
+#     image: dpage/pgadmin4:latest
+#     container_name: pgadmin
+#     ports:
+#       - "5050:80"
+#     environment:
+#       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+#       - PGADMIN_DEFAULT_PASSWORD=admin123
+#     volumes:
+#       - pgadmin_data:/var/lib/pgadmin
+#     restart: unless-stopped
+#     networks:
+#       - inventoryManagement_network
+
+
+# volumes:
+#   postgres_data:
+#   pgadmin_data:
+
+# networks:
+#   inventoryManagement_network:
+#     driver: bridge
